<resources>
    <string name="app_name">CalculeMental</string>
    <string name="score_bouton_value">Score</string>
    <string name="nouvelle_partie_bouton_value">Nouvelle partie</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="button_0_text">0</string>
    <string name="erreurs_possible">Erreurs possible : </string>
    <string name="button_ok">OK</string>
    <string name="score">Score : </string>
    <string name="opposite">(-)</string>
    <string name="effacer">Effacer</string>
</resources>